--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "joi": "^17.6.0",
     "mongoose": "^5.0.2",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "jest": "^27.5.1"
