--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "joi": "^17.6.0",
     "mongoose": "^5.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "valid-url": "^1.0.9"
   },
